@@ -5,9 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.vnsky.bcss.projectbase.domain.config.ParamContractConfig;
 import com.vnsky.bcss.projectbase.domain.dto.*;
 import com.vnsky.bcss.projectbase.domain.mapper.SubscriberMapper;
-import com.vnsky.bcss.projectbase.domain.port.primary.ActiveSubscriberServicePort;
-import com.vnsky.bcss.projectbase.domain.port.primary.ContractHandleServicePort;
-import com.vnsky.bcss.projectbase.domain.port.primary.SubscriberServicePort;
+import com.vnsky.bcss.projectbase.domain.port.primary.*;
 import com.vnsky.bcss.projectbase.domain.port.secondary.ApplicationConfigRepoPort;
 import com.vnsky.bcss.projectbase.domain.port.secondary.SubscriberRepoPort;
 import com.vnsky.bcss.projectbase.domain.port.secondary.external.IntegrationPort;
@@ -18,18 +16,21 @@ import com.vnsky.bcss.projectbase.shared.constant.Constant;
 import com.vnsky.bcss.projectbase.shared.enumeration.domain.*;
 import com.vnsky.bcss.projectbase.shared.pdf.ContractUtils;
 import com.vnsky.bcss.projectbase.shared.utils.DataUtils;
+import com.vnsky.bcss.projectbase.shared.utils.MessageSourceUtils;
+import com.vnsky.bcss.projectbase.shared.utils.PdfContractUtils;
 import com.vnsky.common.exception.domain.BaseException;
 import com.vnsky.minio.dto.DeleteOptionDTO;
 import com.vnsky.minio.dto.DownloadOptionDTO;
 import com.vnsky.minio.dto.UploadOptionDTO;
 import com.vnsky.redis.component.RedisStoreOperation;
+import com.vnsky.security.SecurityUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.util.IOUtils;
 import org.docx4j.openpackaging.exceptions.Docx4JException;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
 import org.springframework.core.io.Resource;
+import org.springframework.core.task.TaskExecutor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -37,6 +38,7 @@ import org.springframework.http.ProblemDetail;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
@@ -48,6 +50,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import com.vnsky.minio.operation.MinioOperations;
 
 @Slf4j
@@ -64,8 +67,11 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
     private final SubscriberMapper subscriberMapper;
     private final SubscriberRepoPort subscriberRepoPort;
     private final ApplicationConfigRepoPort applicationConfigRepoPort;
-    private final SubscriberServicePort subscriberServicePort;
     private final ApplicationContext applicationContext;
+    private final TaskExecutor taskExecutor;
+    private final ActionHistoryServicePort actionHistoryServicePort;
+    private final SubscriberServicePort subscriberServicePort;
+    private final GenContractServicePort genContractServicePort;
 
     private static final String ACTIVE_SUBSCRIBER_TRANSACTION_REDIS_KEY = "ACTIVE_SUBSCRIBER_TRANSACTION::";
     private static final String VNSKY_EKYC_PASSPORT = "VNSKY_EKYC_PASSPORT";
@@ -76,10 +82,11 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
     private static final String ARR_IMAGES_IMAGE_TYPE = "0";
     private static final String ARR_IMAGES_PORTRAIT_TYPE = "1";
     private static final String ARR_IMAGES_CONTRACT_TYPE = "2";
+    private static final String ARR_IMAGES_AGREE_13_TYPE = "7";
     private static final String DEFAULT_PASS_PORT_FILE_NAME = "Hộ chiếu.jpg";
     private static final String DEFAULT_PORTRAIT_FILE_NAME = "Chân dung.jpg";
-    private static final String DEFAULT_ACTIVE_CONTRACT_FILE_NAME = "BBXN.pdf";
-    private static final Integer MAX_TIME_ATTEMPT_GET_ACTIVE_RESULT = 5;
+    private static final String DEFAULT_ACTIVE_CONTRACT_FILE_NAME = "BBXN.png";
+    private static final String DEFAULT_AGREE_13_FILE_NAME = "Đồng ý nghị định 13.png";
     private static final String DEGREE_13_CONFIG_TYPE = "SUB_DOCUMENT_ND13";
     private static final String DEFAULT_LANGUAGE = "vi-vn";
     private static final String MBF_CMD = "MBF";
@@ -88,6 +95,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
     private static final String MODIFY_INFO_PREPAID_SUCCESS_CODE = "0000";
     private static final String SUBMIT_DECREE13_SUCCESS_CODE = "SUCCESS";
     private static final String MESSAGE = "message";
+    private static final String VIETTEL_PREFIX = "84";
+    private static final String UNKNOW_ISSUE_PLACE = "NA";
 
     //Tham số tuyền sang api cập nhật thông tin MBF
     private static final String MODIFY_INFOR_TABLE_NAME = "MODIFY_INFO_MBF";
@@ -96,16 +105,39 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
     private static final String STR_REASON_CODE = "STR_REASON_CODE";
     private static final String STR_ACTION_FLAG = "STR_ACTION_FLAG";
     private static final String STR_APP_OBJECT = "STR_APP_OBJECT";
+    private static final String STR_PROVINCE = "STR_PROVINCE";
+    private static final String STR_DISTRICT = "STR_DISTRICT";
+    private static final String STR_PRECINCT = "STR_PRECINCT";
+    private static final String STR_NATIONALITY = "STR_NATIONALITY";
+    private static final String STR_SUB_NAME = "STR_SUB_NAME";
+    private static final String STR_SEX = "STR_SEX";
+    private static final String STR_BIRTHDAY = "STR_BIRTHDAY";
+    private static final String STR_PASSPORT = "STR_PASSPORT";
+    private static final String STR_PASSPORT_ISSUE_DATE = "STR_PASSPORT_ISSUE_DATE";
+    private static final String STR_PASSPORT_ISSUE_PLACE = "STR_PASSPORT_ISSUE_PLACE";
     private static final String MODIFY_INFO_PARAM_CACHE_KEY = "MODIFY_INFO_PARAM_CACHE_KEY";
 
+    //Cấu hình danh sách quốc gia
+    private static final String COUNTRY_CODE_TYPE = "COUNTRY_CODES";
 
-    @Value("${hi-vn-service.channel-code}")
-    private String hiVnChannelCode;
+    //Danh sách mã code quốc gia được cấu hình trong file excel
+    private static final String COUNTRY_CODES_REDIS_KEY = "::COUNTRY_CODE::";
+
+    private static final String SIGNATURE_FILE_NAME = "signature.jpg";
+    private static final String PASSPORT_FILE_NAME = "passport.jpg";
+    private static final String PORTRAIT_FILE_NAME = "portrait.jpg";
+    private static final String AGREE_13_FILE_NAME = "Đồng ý nghị định 13.";
+    private static final String ACTIVE_CONTRACT_FILE_NAME = "BBXN.";
+
+    private static final String INTERNAL_CLIENT_ID = "000000000000";
+    private static final String SYSTEM = "SYSTEM";
+
 
     @Override
     public String checkIsdn(Long isdn) {
+        isdn = formatIsdn(isdn);
         log.info("[ACTIVE_SUBSCRIBER_STEP_1]: Checking isdn {}", isdn);
-        SubscriberDTO esimRegistration = checkSubscriberIsVerified(isdn);
+        SubscriberDTO esimRegistration = checkSubscriberIsNotVerified(isdn);
         return esimRegistration.getSerial();
     }
 
@@ -115,7 +147,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         String passportBase64 = buildBase64Image(passport);
 
         //B0: Kiểm tra trạng thái serial sim
-        SubscriberDTO eSim = checkSubscriberIsVerified(serial);
+        SubscriberDTO eSim = checkSubscriberIsNotVerified(serial);
 
         //B0: Cài đặt transactionId
         OcrAndFaceCheckResponse ocrAndFaceCheckResponse = initOcrResponse(serial);
@@ -127,15 +159,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
 
         //Nếu verify Hộ chiếu thành công
         if(Objects.equals(ocrAndFaceCheckResponse.getStatus(), Status.ACTIVE.getValue())){
-            ActiveSubscriberDataDTO activeData = ActiveSubscriberDataDTO.builder()
-                .ocrData(ocrAndFaceCheckResponse.getOcrData())
-                .passportUrl(passportUrl)
-                .serial(ocrAndFaceCheckResponse.getSerial())
-                .stepActive(ActiveSubscriberStep.VERIFIED_OCR.getValue())
-                .transactionId(ocrAndFaceCheckResponse.getTransactionId())
-                .idEkyc(ocrAndFaceCheckResponse.getIdEkyc())
-                .isdn(eSim.getIsdn())
-                .build();
+            ActiveSubscriberDataDTO activeData = buildActiveDataAtOcrStep(ocrAndFaceCheckResponse, passportUrl, eSim.getIsdn());
 
             String transactionKey = buildActiveSubscriberTransactionKey(activeData.getTransactionId());
             try {
@@ -149,6 +173,21 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         }
 
         return ocrAndFaceCheckResponse;
+    }
+
+    @Override
+    public ActiveSubscriberDataDTO buildActiveDataAtOcrStep(OcrAndFaceCheckResponse ocrAndFaceCheckResponse, String passportUrl, Long isdn){
+        return ActiveSubscriberDataDTO.builder()
+            .ocrData(ocrAndFaceCheckResponse.getOcrData())
+            .passportUrl(passportUrl)
+            .serial(ocrAndFaceCheckResponse.getSerial())
+            .stepActive(ActiveSubscriberStep.VERIFIED_OCR.getValue())
+            .transactionId(ocrAndFaceCheckResponse.getTransactionId())
+            .idEkyc(ocrAndFaceCheckResponse.getIdEkyc())
+            .isdn(isdn)
+            .userId(SecurityUtil.getCurrentUserId())
+            .employeeFullName(SecurityUtil.getCurrentFullName())
+            .build();
     }
 
     @Override
@@ -167,6 +206,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         ocrAndFaceCheckResponse.setTransactionId(transactionId);
         ocrAndFaceCheckResponse.setIdEkyc(activeData.getIdEkyc());
         ocrAndFaceCheckResponse.setOcrData(activeData.getOcrData());
+        ocrAndFaceCheckResponse.setIsdn(activeData.getIsdn());
         String portraitBase64 = buildBase64Image(portrait);
 
         //B2: Tiến hành face check
@@ -191,11 +231,12 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         OcrAndFaceCheckResponse ocrAndFaceCheckResponse = initOcrResponse(serial);
 
         //B-1: Kiểm tra trạng thái serial sim
-        checkSubscriberIsVerified(serial);
+        SubscriberDTO subscriber = checkSubscriberIsNotVerified(serial);
 
         //B0: Cài đặt transactionId
         String transactionId = UUID.randomUUID().toString();
         ocrAndFaceCheckResponse.setTransactionId(transactionId);
+        ocrAndFaceCheckResponse.setIsdn(subscriber.getIsdn());
 
         //B1: Tiến hành OCR
         String passportUrl = processOcrAndGetUrl(ocrAndFaceCheckResponse, passportBase64, passport);
@@ -218,7 +259,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         return ocrAndFaceCheckResponse;
     }
 
-    private String buildBase64Image(MultipartFile file){
+    @Override
+    public String buildBase64Image(MultipartFile file){
         try {
             byte[] fileContent = file.getBytes();
             return Base64.getEncoder().encodeToString(fileContent);
@@ -242,7 +284,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         }
     }
 
-    private OcrAndFaceCheckResponse initOcrResponse(String serial){
+    @Override
+    public OcrAndFaceCheckResponse initOcrResponse(String serial){
         return OcrAndFaceCheckResponse.builder()
             .status(Status.INACTIVE.getValue())
             .failedStep(OcrFailedStep.OCR.getStep())
@@ -250,22 +293,40 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             .build();
     }
 
-    private String processOcrAndGetUrl(OcrAndFaceCheckResponse ocrAndFaceCheckResponse, String passportBase64, MultipartFile passportFile){
+    @Override
+    public String processOcrAndGetUrl(OcrAndFaceCheckResponse ocrAndFaceCheckResponse, String passportBase64, MultipartFile passportFile){
         //Build request
         OcrPassportRequest ocrRequst = OcrPassportRequest.builder()
             .cardType(CARD_TYPE)
             .cardFront(passportBase64)
             .build();
 
+        if(sendOcrRequest(ocrRequst, ocrAndFaceCheckResponse)){
+            //Upload ảnh hộ chiếu lên minio
+            String url = uploadFileToMinio(passportFile, Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, ocrAndFaceCheckResponse.getTransactionId(), PASSPORT_FILE_NAME);
+            log.info("[ACTIVE_SUBSCRIBER]: upload temp passport file successfully");
+            return url;
+        }
+        return null;
+    }
+
+    @Override
+    public boolean sendOcrRequest(OcrPassportRequest ocrRequst, OcrAndFaceCheckResponse ocrAndFaceCheckResponse){
         BaseIntegrationRequest ocrRequest = integrationPort.buildIntegrationRequest(VNSKY_EKYC_PASSPORT, OCR_TYPE, null, ocrRequst);
         OcrStepResponse ocrResponse = integrationPort.executeRequest(ocrRequest, OcrStepResponse.class);
 
         //Nếu Ocr thất bại, trả về luôn
-        if(!Objects.equals(ocrResponse.getErrCode(), SUCCESS_CODE) ||
-            !Objects.equals(Boolean.TRUE, ocrResponse.getDataOcr().getOcrPassport().getValidateDocument())){
-                log.info("[ACTIVE_SUBSCRIBER]: ocr fail {}", ocrResponse);
-                ocrAndFaceCheckResponse.setMessage(ocrResponse.getMessage());
-                return null;
+        if(!Objects.equals(ocrResponse.getErrCode(), SUCCESS_CODE)){
+            log.info("[ACTIVE_SUBSCRIBER]: ocr fail {}", ocrResponse);
+            ocrAndFaceCheckResponse.setMessage(ocrResponse.getMessage());
+            return false;
+        }
+
+        if(!Objects.equals(Boolean.TRUE, ocrResponse.getDataOcr().getOcrPassport().getValidateDocument())){
+            log.info("[ACTIVE_SUBSCRIBER]: ocr fail due to invalid document {}", ocrResponse);
+            String message = MessageSourceUtils.getMessageDetail(ErrorCode.PASSPORT_NOT_VALID.get());
+            ocrAndFaceCheckResponse.setMessage(message);
+            return false;
         }
 
         log.info("[ACTIVE_SUBSCRIBER]: ocr success fully {}", ocrResponse);
@@ -273,13 +334,15 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         ocrAndFaceCheckResponse.setStatus(Status.ACTIVE.getValue());
         ocrAndFaceCheckResponse.setOcrData(ocrResponse.getDataOcr().getOcrPassport().getInfors());
 
-        //Upload ảnh hộ chiếu lên minio
-        String url = uploadFileToMinio(passportFile, Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, ocrAndFaceCheckResponse.getTransactionId());
-        log.info("[ACTIVE_SUBSCRIBER]: upload temp passport file successfully");
-        return url;
+        if(Objects.equals(ocrResponse.getDataOcr().getOcrPassport().getInfors().getIssuedPlace(), UNKNOW_ISSUE_PLACE)){
+            ocrResponse.getDataOcr().getOcrPassport().getInfors().setIssuedPlace(null);
+        }
+
+        return true;
     }
 
-    private String processFaceCheckAndGetUrl(OcrAndFaceCheckResponse ocrAndFaceCheckResponse, String portraitBase64, MultipartFile portraitFile){
+    @Override
+    public String processFaceCheckAndGetUrl(OcrAndFaceCheckResponse ocrAndFaceCheckResponse, String portraitBase64, MultipartFile portraitFile){
         //Đặt vị trí thất bại là FACE check
         ocrAndFaceCheckResponse.setFailedStep(OcrFailedStep.FACE_CHECK.getStep());
 
@@ -295,7 +358,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         //Nếu Ocr thất bại, trả về luôn
         if(!Objects.equals(faceCheckResponse.getErrCode(), SUCCESS_CODE)){
             log.info("[ACTIVE_SUBSCRIBER]: face check fail {}", faceCheckResponse);
-            ocrAndFaceCheckResponse.setMessage(faceCheckResponse.getErrorMessages());
+            ocrAndFaceCheckResponse.setMessage(faceCheckResponse.getMessage());
             ocrAndFaceCheckResponse.setStatus(Status.INACTIVE.getValue());
             return null;
         }else{
@@ -303,7 +366,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             ocrAndFaceCheckResponse.setStatus(Status.ACTIVE.getValue());
         }
 
-        String url = uploadFileToMinio(portraitFile, Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, ocrAndFaceCheckResponse.getTransactionId());
+        String url = uploadFileToMinio(portraitFile, Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, ocrAndFaceCheckResponse.getTransactionId(), PORTRAIT_FILE_NAME);
         log.info("[ACTIVE_SUBSCRIBER]: upload temp portrait file successfully");
         return url;
     }
@@ -322,24 +385,41 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             .serial(ocrAndFaceCheckResponse.getSerial())
             .stepActive(ActiveSubscriberStep.VERIFIED_FACE.getValue())
             .transactionId(ocrAndFaceCheckResponse.getTransactionId())
+            .isdn(ocrAndFaceCheckResponse.getIsdn())
             .build();
 
         cacheActiveSubscriberDataToRedis(activeData.getTransactionId(), activeData);
     }
 
-    private String uploadFileToMinio(MultipartFile file, String folderPath, String serial){
+    @Override
+    public String uploadFileToMinio(byte[] bytes, String folderPath, String fileName){
+        LocalDate today = LocalDate.now();
+        UploadOptionDTO uploadOptionDTO = UploadOptionDTO.builder()
+            .uri(folderPath,
+                today.getYear() + "-" + today.getMonthValue(),
+                fileName)
+            .isPublic(false)
+            .build();
+
+        minioOperations.upload(new ByteArrayInputStream(bytes), uploadOptionDTO);
+        log.info("[ACTIVE_SUBSCRIBER]: upload file successfully to {} with {} bytes",uploadOptionDTO.getUri(), bytes.length);
+        return uploadOptionDTO.getUri();
+    }
+
+    @Override
+    public String uploadFileToMinio(MultipartFile file, String folderPath, String transactionId, String fileName){
         try {
             LocalDate today = LocalDate.now();
             UploadOptionDTO uploadOptionDTO = UploadOptionDTO.builder()
                 .uri(folderPath,
-                    today.toString(),
-                    serial,
-                    file.getOriginalFilename())
+                    today.getYear() + "-" + today.getMonthValue(),
+                    transactionId,
+                    fileName == null ? file.getOriginalFilename() : fileName)
                 .isPublic(false)
                 .build();
 
             minioOperations.upload(file.getInputStream(), uploadOptionDTO);
-            log.info("[ACTIVE_SUBSCRIBER]: upload file successfully");
+            log.info("[ACTIVE_SUBSCRIBER]: upload file successfully to {}",uploadOptionDTO.getUri());
             return uploadOptionDTO.getUri();
         } catch (IOException e) {
             log.error("[ACTIVE_SUBSCRIBER]: Cannot upload file to minio", e);
@@ -347,7 +427,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         }
     }
 
-    private String uploadFileToMinio(InputStream inputStream, String folderPath, String fileName){
+    @Override
+    public String uploadFileToMinio(InputStream inputStream, String folderPath, String fileName){
         UploadOptionDTO uploadOptionDTO = UploadOptionDTO.builder()
             .uri(folderPath,
                 fileName)
@@ -355,7 +436,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             .build();
 
         minioOperations.upload(inputStream, uploadOptionDTO);
-        log.info("[ACTIVE_SUBSCRIBER]: upload file successfully");
+        log.info("[ACTIVE_SUBSCRIBER]: upload file successfully to {}", uploadOptionDTO.getUri());
         return uploadOptionDTO.getUri();
     }
 
@@ -375,9 +456,13 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             throw BaseException.badRequest(ErrorCode.ACTIVE_SUBSCRIBER_TRANSACTION_STEP_IS_NOT_WAITING_GEN_CONTRACT).build();
         }
 
+        //Lấy thông tin customerCode và contractCode
+        SubscriberDTO subscriber = checkSubscriberIsNotVerified(activeData.getSerial());
+        genContractServicePort.genCustomerCode(activeData, subscriber);
+
         //B2: Upload hợp đồng kích hoạt
-        ContractFileUrlDTO activeContractUrl = uploadActiveSubscriberContract(activeData, request);
-        activeData.setContractUrl(activeContractUrl);
+        String activeContractUrl = uploadActiveSubscriberContract(activeData, request);
+        activeData.setContractPngUrl(activeContractUrl);
 
         //B3: Cập nhật trạng thái giao dịch trong cáche
         cacheActiveSubscriberDataToRedis(request.getTransactionId(), activeData);
@@ -385,19 +470,18 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         return new GenContractActiveSubscriberResponse();
     }
 
-    private ContractFileUrlDTO uploadActiveSubscriberContract(ActiveSubscriberDataDTO activeData, GenActiveSubscriberContractRequest genContractRequest){
+    private String uploadActiveSubscriberContract(ActiveSubscriberDataDTO activeData, GenActiveSubscriberContractRequest genContractRequest){
         GenContractDTO genContractData = activeSubscriberMapper.mapGenContractDto(activeData);
+        // Lấy thông tin chữ ký người thực hiện
+        genContractData.setSignatureCskh(getCskhSignature(activeData.getUserId(), activeData.getTransactionId()));
+        genContractData.setEmployeeName(activeData.getEmployeeFullName());
 
         DownloadOptionDTO downloadOptionDTO = getDownloadActiveContractOption();
 
         Resource templateFile = getTemplateFile(downloadOptionDTO);
         try {
             ByteArrayOutputStream outPutStreamDegree = contractHandleServicePort.genContractFromTemplate(new ByteArrayInputStream(templateFile.getContentAsByteArray()), genContractData, TypeContract.PDF, ContractUtils.TypeHandlerWord.MAIL_MERGE, ContractUtils.TypeHandlerWord.CHECK_BOX);
-            String pdf = uploadFileToMinio(new ByteArrayInputStream(outPutStreamDegree.toByteArray()), buildTempContractUrl(activeData.getTransactionId()), "BBXN." + TypeContract.PDF);
-
-            return ContractFileUrlDTO.builder()
-                .pdfUrl(pdf)
-                .build();
+            return uploadFileToMinio(new ByteArrayInputStream(outPutStreamDegree.toByteArray()), buildTempContractUrl(activeData.getTransactionId()), ACTIVE_CONTRACT_FILE_NAME + TypeContract.PDF);
         } catch (Docx4JException | IllegalAccessException | IOException e) {
             log.error("[ACTIVE_SUBSCRIBER]: không thể sinh hợp đồng cho giao dịch {}", genContractRequest.getTransactionId(), e);
             throw BaseException.badRequest(ErrorCode.GEN_CONTRACT_FAIL)
@@ -422,7 +506,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             String decompressedJson = DataUtils.decompress(activeSubscriberData);
             return objectMapper.readValue(decompressedJson, ActiveSubscriberDataDTO.class);
         } catch (JsonProcessingException e) {
-            log.error("[ACTIVE_SUBSCRIBER]: Cannot parse active subscriber data from redis with transactionId: {}", transactionId);
+            log.error("[ACTIVE_SUBSCRIBER]: Cannot parse active subscriber data from redis with transactionId: {}", transactionId, e);
             throw BaseException.badRequest(ErrorCode.CAN_NOT_PARSE_ACTIVE_SUBSCRIBER_DATA_FROM_REDIS).build();
         }
     }
@@ -432,12 +516,13 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         ActiveSubscriberDataDTO activeData = getActiveDataFromRedis(id);
 
         DownloadOptionDTO downloadOptionDTO = DownloadOptionDTO.builder()
-            .uri(activeData.getContractUrl().getPdfUrl())
+            .uri(activeData.getContractPngUrl())
             .isPublic(false)
             .build();
         return minioOperations.download(downloadOptionDTO);
     }
 
+    @Transactional
     @Override
     public void signContract(GenActiveSubscriberContractRequest request, MultipartFile signature) {
         log.info("[ACTIVE_SUBSCRIBER_STEP_4]: Sign contract for transactionId {}", request.getTransactionId());
@@ -448,44 +533,71 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             throw BaseException.badRequest(ErrorCode.ACTIVE_SUBSCRIBER_TRANSACTION_STEP_IS_NOT_WAITING_SIGN_CONTRACT).build();
         }
 
+        //Lấy thông tin customerCode và contractCode
+        SubscriberDTO subscriber = checkSubscriberIsNotVerified(activeData.getSerial());
+        genContractServicePort.genCustomerCode(activeData, subscriber);
+
         //Cài đặt chấp thuận nghị định 13
         activeData.setAgreeDegree13(request.getAgreeDegree13());
 
-        //b1: Ký hợp đồng kich hoạt
-        ContractFileUrlDTO signedActiveContractUrl = signActiveContract(activeData, signature);
-
-        //b2: Ký biên bản xác nhận nghị định 13
-
-        activeData.setStepActive(ActiveSubscriberStep.WAITING_SUBMIT.getValue());
-        activeData.setContractUrl(signedActiveContractUrl);
-
-        cacheActiveSubscriberDataToRedis(request.getTransactionId(), activeData);
+        signContractAndUploadSignature(activeData, signature, request.getTransactionId());
     }
 
-    private ContractFileUrlDTO signActiveContract(ActiveSubscriberDataDTO activeData, MultipartFile signature){
+    /**
+     *
+     * @param activeData: Dữ liệu kích hoạt thuê bao
+     * @param signature: File chữ ký
+     * @param transactionId: Id của giao dịch
+     * @apiNote : Hàm này thực hiện ký hợp đồng và upload ảnh chữ ký lên minio
+     */
+    @Override
+    public void signContractAndUploadSignature(ActiveSubscriberDataDTO activeData, MultipartFile signature, String transactionId){
+        try {
+            byte[] bytes = signature.getBytes();
+
+            ContractFileUrlDTO contractUrl = signActiveContractAndGetUrl(activeData, bytes, TypeContract.PNG, false);
+            String signatureUrl = uploadFileToMinio(bytes, Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, transactionId + "/" + SIGNATURE_FILE_NAME);
+
+            activeData.setStepActive(ActiveSubscriberStep.WAITING_SUBMIT.getValue());
+            activeData.setContractPngUrl(contractUrl.getPngUrl());
+            activeData.setContractPdfUrl(contractUrl.getPdfUrl());
+            activeData.setSignatureUrl(signatureUrl);
+
+            genDecree13(activeData, bytes);
+
+            cacheActiveSubscriberDataToRedis(transactionId, activeData);
+        } catch (IOException e) {
+            log.error("[ACTIVE_SUBSCRIBER_STEP_4]: Không thể ký hợp đồng cho giao dịch {}", transactionId, e);
+            throw BaseException.badRequest(ErrorCode.GEN_CONTRACT_FAIL).message(e.getMessage()).build();
+        }
+    }
+
+    @Override
+    public ContractFileUrlDTO signActiveContractAndGetUrl(ActiveSubscriberDataDTO activeData, byte[] bytes, TypeContract typeContract, boolean isFinal){
         GenContractDTO genContractData = activeSubscriberMapper.mapGenContractDto(activeData);
+        // Lấy thông tin chữ ký người thực hiện
+        genContractData.setSignatureCskh(getCskhSignature(activeData.getUserId(), activeData.getTransactionId()));
 
         DownloadOptionDTO downloadOptionDTO = getDownloadActiveContractOption();
 
         Resource templateFile = getTemplateFile(downloadOptionDTO);
         try {
-            genContractData.setSignatureCustomer(signature.getBytes());
+            genContractData.setSignatureCustomer(bytes);
 
             byte[] templateData = IOUtils.toByteArray(templateFile.getInputStream());
 
-            ByteArrayOutputStream outPutStreamContractPdf = contractHandleServicePort.genContractFromTemplate(new ByteArrayInputStream(templateData), genContractData, TypeContract.PDF, ContractUtils.TypeHandlerWord.MAIL_MERGE, ContractUtils.TypeHandlerWord.CHECK_BOX);
+            ByteArrayOutputStream outPutStreamContractPdf = PdfContractUtils.fillDataToPdf(templateData, genContractData, GenContractDTO.class);
+            ByteArrayOutputStream outputStreamContractPng = PdfContractUtils.convertPdfToOneJpgFile(outPutStreamContractPdf.toByteArray(), false);
+            String dirUrl = isFinal ? buildFinalContractUrl(activeData.getTransactionId()) : buildTempContractUrl(activeData.getTransactionId());
 
-            ByteArrayOutputStream outPutStreamContractPng = contractHandleServicePort.convertPdfToPng(new ByteArrayInputStream(outPutStreamContractPdf.toByteArray()));
-
-
-            String pdfUrl = uploadFileToMinio(new ByteArrayInputStream(outPutStreamContractPdf.toByteArray()), buildTempContractUrl(activeData.getTransactionId()), "BBXN." + TypeContract.PDF);
-            String pngUrl = uploadFileToMinio(new ByteArrayInputStream(outPutStreamContractPng.toByteArray()), buildTempContractUrl(activeData.getTransactionId()), "BBXH." + TypeContract.PNG);
+            String contractPdfUrl = uploadFileToMinio(new ByteArrayInputStream(outPutStreamContractPdf.toByteArray()), dirUrl, ACTIVE_CONTRACT_FILE_NAME + TypeContract.PDF.name());
+            String contractPngUrl = uploadFileToMinio(new ByteArrayInputStream(outputStreamContractPng.toByteArray()), dirUrl, ACTIVE_CONTRACT_FILE_NAME + TypeContract.PNG.name());
 
             return ContractFileUrlDTO.builder()
-                .pdfUrl(pdfUrl)
-                .pngUrl(pngUrl)
+                .pdfUrl(contractPdfUrl)
+                .pngUrl(contractPngUrl)
                 .build();
-        } catch (Docx4JException | IllegalAccessException | IOException e) {
+        } catch (IOException e) {
             log.error("[ACTIVE_SUBSCRIBER]: không thể ký hợp đồng cho giao dịch");
             throw BaseException.badRequest(ErrorCode.GEN_CONTRACT_FAIL)
                 .message(e.getMessage())
@@ -497,6 +609,14 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         return DownloadOptionDTO.builder()
             .uri(paramContractConfig.getTemplate().getContractSimActiveFolder(),
                 paramContractConfig.getTemplate().getContractSimActiveFile())
+            .isPublic(false)
+            .build();
+    }
+
+    private DownloadOptionDTO getDownloadDecree13ContractOption(){
+        return DownloadOptionDTO.builder()
+            .uri(paramContractConfig.getTemplate().getContractSimActiveFolder(),
+                paramContractConfig.getTemplate().getDecree13confirmationRecord())
             .isPublic(false)
             .build();
     }
@@ -517,55 +637,78 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             throw BaseException.badRequest(ErrorCode.ACTIVE_SUBSCRIBER_TRANSACTION_STEP_IS_NOT_WAITING_SUBMIT).build();
         }
 
-        SubscriberDTO esimRegistration = checkSubscriberIsVerified(activeSubscriberData.getSerial());
+        //Gen lại ảnh hợp đồng mờ đi
+        try {
+            Resource pdfFile = downloadFile(activeSubscriberData.getContractPdfUrl());
+            ByteArrayOutputStream finalContractImg = PdfContractUtils.convertPdfToOneJpgFile(pdfFile.getContentAsByteArray(), true);
+            String finalContractUrl = uploadFileToMinio(finalContractImg.toByteArray(), Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, transactionId + "/" + ACTIVE_CONTRACT_FILE_NAME + TypeContract.PNG);
+            activeSubscriberData.setContractPngUrl(finalContractUrl);
+        } catch (Exception e) {
+            log.error("Exception when generate final contract png", e);
+            throw BaseException.badRequest(ErrorCode.ATTEMPT_GET_ACTIVE_RESULT_EXCEED_MAX_TIMES)
+                .addProblemDetail(ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, e.getMessage()))
+                .build();
+        }
+
+        SubscriberDTO esimRegistration = checkSubscriberIsNotVerified(activeSubscriberData.getSerial());
 
         //B1: Map thông tin từ cache vào Esim Registration
         subscriberMapper.mapFromSubmitData(esimRegistration, activeSubscriberData);
 
         //B2: Lưu lại thông tin
-        esimRegistration = subscriberServicePort.saveAndFlushNewTransaction(esimRegistration);
+        subscriberServicePort.saveAndFlushNewTransaction(esimRegistration);
 
         //B32: Tải file ảnh hộ chiếu, chân dung, các file hợp đồng gửi sang mobifone
         List<List<String>> buildArrImagesForUpdateMbf = buildArrImagesForUpdateMbf(activeSubscriberData);
 
         //B3: Map thông tin kích hoạt gửi sang MBF
         ModifyInforParamsDTO params = getModifyInfoParamFromCache();
-        UpdateSubscriberDataMbfRequest updateSubscriberDataMbf = subscriberMapper.mapUpdateMbfData(esimRegistration, buildArrImagesForUpdateMbf, params);
+        UpdateSubscriberDataMbfRequest updateSubscriberDataMbf = subscriberMapper.mapUpdateMbfData(esimRegistration, activeSubscriberData, buildArrImagesForUpdateMbf, params);
 
         //B4: Gọi sang MBF đồng bộ thông tin
         ActiveSubscriberService self = applicationContext.getBean(ActiveSubscriberService.class);
-        self.processSendActiveDataToMbf(updateSubscriberDataMbf, activeSubscriberData);
+        self.processSendActiveDataToMbf(updateSubscriberDataMbf, activeSubscriberData, true);
+
+        //B5: Lưu lịch sử tác động thuê bao
+        actionHistoryServicePort.save(ActionHistoryActionCode.UPDATE_INFO.getCode(), esimRegistration.getId());
     }
-
-
 
     /**
      *
      * @param updateSubscriberDataMbf: Thông tin đồng bộ sang Mbf
      * @param activeData: Dữ liệu chứa các file ảnh, hơp đồng tạm thời
-     * @apiNote Xử lý gửi api cập nhật thông tin sang phía MBF, có retry tối đa 6 lần
+     * @apiNote Xử lý gửi api cập nhật thông tin sang phía MBF, có retry tối đa 5 lần
      */
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
     @Override
-    @Retryable(retryFor = Exception.class, maxAttempts = 5, backoff = @Backoff(delay = 100))
-    public void processSendActiveDataToMbf(UpdateSubscriberDataMbfRequest updateSubscriberDataMbf, ActiveSubscriberDataDTO activeData) {
-        log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Get active result for serial {}, isdn {}, with {} times", updateSubscriberDataMbf.getStrSerial(), updateSubscriberDataMbf.getStrIsdn(), updateSubscriberDataMbf.getCountNumber());
+    @Retryable(retryFor = Exception.class, maxAttempts = 2, backoff = @Backoff(delay = 100))
+    public void processSendActiveDataToMbf(UpdateSubscriberDataMbfRequest updateSubscriberDataMbf, ActiveSubscriberDataDTO activeData, boolean decree13) {
+        log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Get active result for serial {}, isdn {}", updateSubscriberDataMbf.getStrSerial(), updateSubscriberDataMbf.getStrIsdn());
 
-        //Step 1: Gửi yêu cầu submit nghị định 13
-        SubmitDecree13Response submitDecree13Response = submitAgreeDecree13(activeData.getAgreeDegree13(), updateSubscriberDataMbf.getStrIsdn());
-
-        //Step 2: Gửi yêu cầu cập nhật thông tin
+        //Step 1: Gửi yêu cầu cập nhật thông tin
         log.info("[ACTIVE_SUBSCRIBER_STEP_5: Data for modify info MBF: {}", updateSubscriberDataMbf);
 
         BaseIntegrationRequest modifyInfoRequest = integrationPort.buildIntegrationRequest(MBF_CMD, UPDATE_SUBSCRIBER_INFO_TYPE, null, updateSubscriberDataMbf);
         ModifyInfoPrepaidV2Response modifyInfoResponse = integrationPort.executeRequest(modifyInfoRequest, ModifyInfoPrepaidV2Response.class);
         if(Objects.equals(modifyInfoResponse.getCode(), MODIFY_INFO_PREPAID_SUCCESS_CODE)){
-            log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Active subscriber successfully for isdn {}, serial {}, count retry {}", updateSubscriberDataMbf.getStrIsdn(), updateSubscriberDataMbf.getStrSerial(), updateSubscriberDataMbf.getCountNumber());
+            log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Active subscriber successfully for isdn {}, serial {}", updateSubscriberDataMbf.getStrIsdn(), updateSubscriberDataMbf.getStrSerial());
+
+            //Step 2: Gửi yêu cầu submit nghị định 13 (chỉ khi decree13 = true)
+            SubmitDecree13Response submitDecree13Response = null;
+            if (decree13) {
+                submitDecree13Response = submitAgreeDecree13(activeData.getAgreeDegree13(), updateSubscriberDataMbf.getStrIsdn(), activeData.getContractCode(), modifyInfoResponse.getData().get(0).getStrSubId());
+            }
 
             //Cập nhật trạng thái thành đã đồng bộ thông tin thành công
-            SubscriberDTO esimRegistration = subscriberRepoPort.findByLastIsdn(updateSubscriberDataMbf.getStrIsdn()).orElseThrow(() -> BaseException.notFoundError(ErrorCode.ISDN_NOT_FOUND).build());
+            SubscriberDTO esimRegistration = subscriberRepoPort.findByLastIsdn(activeData.getIsdn()).orElseThrow(() -> BaseException.notFoundError(ErrorCode.ISDN_NOT_FOUND).build());
             esimRegistration.setVerifiedStatus(EsimRegistrationStatus.ACTIVED.getValue());
-            esimRegistration.setMbfSubId(submitDecree13Response.getData().get(0).getSubId());
+            if (submitDecree13Response != null) {
+                esimRegistration.setMbfSubId(modifyInfoResponse.getData().get(0).getStrSubId());
+            }
+            esimRegistration.setStatus(Status.ACTIVE.getValue());
             esimRegistration = subscriberServicePort.saveAndFlushNewTransaction(esimRegistration);
+            esimRegistration.setUpdateInfoBy(SecurityUtil.getCurrentUsername() == null ? SYSTEM : SecurityUtil.getCurrentUsername());
+            esimRegistration.setUpdateInfoDate(LocalDateTime.now());
 
             //Chuyển thông tin hồ sơ từ th mục tạm -> thư mục chính thức
             try {
@@ -592,22 +735,24 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
      * @param agreeDecree13: Lưu thông tin chấp thuận nghị định 13
      * @apiNote : Hàm này gửi yêu cầu chấp thuận nghị định 13 của khách hàng sang MBF
      */
-    private SubmitDecree13Response submitAgreeDecree13(AgreeDegree13DTO agreeDecree13, Long isdn){
+    private SubmitDecree13Response submitAgreeDecree13(AgreeDecree13DTO agreeDecree13, String isdn, String contractId, String subId){
         // "CT01:1;CT02:1;CT03:1;CT04:1;CT05:1;CT06:1;"
-        String acceptedValue = "CT01:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk1())
-                            + ",CT02:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk2())
-                            + ",CT03:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk3())
-                            + ",CT04:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk4())
-                            + ",CT05:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk5())
-                            + ",CT06:" + buildAcceptedValueDecree13(agreeDecree13.isAgreeDk6());
-
-        LocalDateTime now = LocalDateTime.now();
+         String tc1 = buildAcceptedValueDecree13(agreeDecree13.isAgreeDk1());
+         String tc2 = buildAcceptedValueDecree13(agreeDecree13.isAgreeDk2());
+         String tc3 = buildAcceptedValueDecree13(agreeDecree13.isAgreeDk3());
+         String tc4 = buildAcceptedValueDecree13(agreeDecree13.isAgreeDk4());
+         String tc5 = buildAcceptedValueDecree13(agreeDecree13.isAgreeDk5());
 
         SubmitDecree13Request submitRequest = SubmitDecree13Request.builder()
             .isdn(isdn)
-            .channelCode(hiVnChannelCode)
-            .acceptedValue(acceptedValue)
-            .acceptedDateTime(now.format(Constant.TIME_STAMP_FE_DATE_FORMATTER))
+            .subId(subId)
+            .contractId(contractId)
+            .tc1(tc1)
+            .tc2(tc2)
+            .tc3(tc3)
+            .tc4(tc4)
+            .tc5(tc5)
+            .noteDesc("DGL")
             .build();
 
         BaseIntegrationRequest integrationRequest = integrationPort.buildIntegrationRequest(MBF_CMD, DECREE13_TYPE, null, submitRequest);
@@ -617,7 +762,7 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             log.error("[ACTIVE_SUBSCRIBER_STEP_5]: Submit decree 13 fail for isdn {} by {}", isdn, response.getDescription());
             throw BaseException.badRequest(ErrorCode.SUBMIT_DECREE13_FAIL)
                 .message("Lỗi khi xác nhận nghị định 13 do "+ response.getDescription())
-                .addParameter(MESSAGE, response.getDescription())
+                .addParameter(MESSAGE, response.getData().get(0) == null ? response.getDescription() : response.getData().get(0).getError())
                 .build();
         }else{
             log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Submit decree 13 successfully for isdn {}", isdn);
@@ -651,17 +796,34 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             urlFolder,
             portraitImg.getFilename()));
 
+
         //File hợp đồng kích hoạt PDF
-        Resource activeContractPdfFile = downloadFile(activeData.getContractUrl().getPdfUrl());
-        subscriber.setContractPdfUrl(uploadFileToMinio(new ByteArrayInputStream(activeContractPdfFile.getContentAsByteArray()),
-            urlFolder,
-            activeContractPdfFile.getFilename()));
+        if(activeData.getContractPdfUrl() != null){
+            Resource activeContractPdf = downloadFile(activeData.getContractPdfUrl());
+            subscriber.setContractPdfUrl(uploadFileToMinio(new ByteArrayInputStream(activeContractPdf.getContentAsByteArray()),
+                urlFolder,
+                activeContractPdf.getFilename()));
+        }
 
         //File hợp dồng kích hoạt PNG
-        Resource activeContractPng = downloadFile(activeData.getContractUrl().getPngUrl());
+        Resource activeContractPng = downloadFile(activeData.getContractPngUrl());
         subscriber.setContractPngUrl(uploadFileToMinio(new ByteArrayInputStream(activeContractPng.getContentAsByteArray()),
             urlFolder,
             activeContractPng.getFilename()));
+
+        //File chữ ký nè
+        Resource signatureFile = downloadFile(activeData.getSignatureUrl());
+        subscriber.setSignatureUrl(uploadFileToMinio(new ByteArrayInputStream(signatureFile.getContentAsByteArray()),
+            urlFolder,
+            signatureFile.getFilename()));
+
+        //Ảnh nghị định 13
+        if(activeData.getAgreeDecree13PdfUrl() != null){
+            Resource decree13File = downloadFile(activeData.getAgreeDecree13PdfUrl());
+            subscriber.setDecree13PdfUrl(uploadFileToMinio(new ByteArrayInputStream(decree13File.getContentAsByteArray()),
+                urlFolder,
+                decree13File.getFilename()));
+        }
 
         log.info("[ACTIVE_SUBSCRIBER_STEP_5]: Upload all files to folder {}", urlFolder);
     }
@@ -672,7 +834,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         return applicationConfigRepoPort.getByTypeAndLanguage(DEGREE_13_CONFIG_TYPE, language);
     }
 
-    private Resource downloadFile(String url) {
+    @Override
+    public Resource downloadFile(String url) {
         DownloadOptionDTO downloadOption = DownloadOptionDTO.builder()
             .uri(url)
             .isPublic(false)
@@ -686,7 +849,8 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
      * @param activeData: Lưu tạm thời ảnh và hợp đồng
      * @return Chuỗi String gồm mã hóa các ảnh, hợp đồng để gửi sang MBF
      */
-    private List<List<String>> buildArrImagesForUpdateMbf(ActiveSubscriberDataDTO activeData){
+    @Override
+    public List<List<String>> buildArrImagesForUpdateMbf(ActiveSubscriberDataDTO activeData){
         log.info("[ACTIVE_SUBSCRIBER_STEP_5]: download files for active subscriber with transactionId: {}", activeData.getTransactionId());
 
         log.info("[ACTIVE_SUBSCRIBER_STEP_5]: download pass");
@@ -696,9 +860,10 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         Resource portraitFile = downloadFile(activeData.getPortraitUrl());
 
         log.info("[ACTIVE_SUBSCRIBER_STEP_5]: download active contract");
-        Resource activeContractPdfFile = downloadFile(activeData.getContractUrl().getPdfUrl());
 
-        Resource activeContractPngFile = downloadFile(activeData.getContractUrl().getPngUrl());
+        Resource activeContractPngFile = downloadFile(activeData.getContractPngUrl());
+
+        Resource agree13PngFile = downloadFile(activeData.getAgreeDecree13PngUrl());
 
         //Build tham số hình ảnh hộ chiếu
         List<String> passportArr = List.of(StringUtils.hasText(passportFile.getFilename()) ? passportFile.getFilename() : DEFAULT_PASS_PORT_FILE_NAME, buildBase64Image(passportFile), ARR_IMAGES_IMAGE_TYPE);
@@ -707,9 +872,12 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         List<String> portraitArr = List.of(StringUtils.hasText(portraitFile.getFilename()) ? portraitFile.getFilename() : DEFAULT_PORTRAIT_FILE_NAME, buildBase64Image(portraitFile), ARR_IMAGES_PORTRAIT_TYPE);
 
         //Build tham số file hợp đồng
-        List<String> activeContractArr = List.of(StringUtils.hasText(activeContractPdfFile.getFilename()) ? activeContractPdfFile.getFilename() : DEFAULT_ACTIVE_CONTRACT_FILE_NAME, buildBase64Image(activeContractPngFile), ARR_IMAGES_CONTRACT_TYPE);
+        List<String> activeContractArr = List.of(StringUtils.hasText(activeContractPngFile.getFilename()) ? activeContractPngFile.getFilename() : DEFAULT_ACTIVE_CONTRACT_FILE_NAME, buildBase64Image(activeContractPngFile), ARR_IMAGES_CONTRACT_TYPE);
 
-        return Arrays.asList(passportArr, portraitArr, activeContractArr);
+        //Build tham số file nghị định 13
+        List<String> agree13Arr = List.of(StringUtils.hasText(agree13PngFile.getFilename()) ? agree13PngFile.getFilename() : DEFAULT_AGREE_13_FILE_NAME, buildBase64Image(agree13PngFile), ARR_IMAGES_AGREE_13_TYPE);
+
+        return Arrays.asList(passportArr, passportArr, portraitArr, activeContractArr, agree13Arr);
     }
 
     private void deleteFileByUrl(String url){
@@ -738,6 +906,16 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         String strReasonCode = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_REASON_CODE).getName();
         String strActionFlag = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_ACTION_FLAG).getName();
         String strAppObject = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_APP_OBJECT).getName();
+        String strProvince = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_PROVINCE).getName();
+        String strDistrict = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_DISTRICT).getName();
+        String strPrecinct = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_PRECINCT).getName();
+        String strNationality = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_NATIONALITY).getName();
+        String strSubName = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_SUB_NAME).getName();
+        String strSex = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_SEX).getName();
+        String strBirthday = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_BIRTHDAY).getName();
+        String strPasspost = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_PASSPORT).getName();
+        String strPasspostIssueDate = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_PASSPORT_ISSUE_DATE).getName();
+        String strPasspostIssuePlace = applicationConfigRepoPort.getByTableNameAndColumnName(MODIFY_INFOR_TABLE_NAME, STR_PASSPORT_ISSUE_PLACE).getName();
 
         ModifyInforParamsDTO params = ModifyInforParamsDTO.builder()
             .strSubType(strSubType)
@@ -745,18 +923,30 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
             .strReasonCode(strReasonCode)
             .strActionFlag(strActionFlag)
             .strAppObject(strAppObject)
+            .strProvince(strProvince)
+            .strDistrict(strDistrict)
+            .strPrecinct(strPrecinct)
+            .strNationality(strNationality)
+            .strSubName(strSubName)
+            .strSex(strSex)
+            .strBirthday(strBirthday)
+            .strPasspost(strPasspost)
+            .strPasspostIssueDate(strPasspostIssueDate)
+            .strPasspostIssuePlace(strPasspostIssuePlace)
             .build();
 
-        redisStoreOperation.putWithExpireTime(MODIFY_INFO_PARAM_CACHE_KEY, params, 30, TimeUnit.MINUTES);
+//        redisStoreOperation.putWithExpireTime(MODIFY_INFO_PARAM_CACHE_KEY, params, 30, TimeUnit.MINUTES);
         return params;
     }
 
-    private ModifyInforParamsDTO getModifyInfoParamFromCache(){
-        ModifyInforParamsDTO params = (ModifyInforParamsDTO) redisStoreOperation.get(MODIFY_INFO_PARAM_CACHE_KEY);
-        if(params == null){
-            return cacheModifyInfoParam();
-        }
-        return params;
+    @Override
+    public ModifyInforParamsDTO getModifyInfoParamFromCache(){
+//        ModifyInforParamsDTO params = (ModifyInforParamsDTO) redisStoreOperation.get(MODIFY_INFO_PARAM_CACHE_KEY);
+//        if(params == null){
+//            return cacheModifyInfoParam();
+//        }
+//        return params;
+        return cacheModifyInfoParam();
     }
 
     /**
@@ -764,9 +954,10 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
      *
      * @param serial: Kiểm tra theo serial
      */
-    private SubscriberDTO checkSubscriberIsVerified(String serial){
-        SubscriberDTO subscriber = subscriberRepoPort.findBySerialLastSerial(serial).orElseThrow(() -> BaseException.badRequest(ErrorCode.ISDN_NOT_FOUND).build());
-        checkSubscriberIsVerified(subscriber);
+    @Override
+    public SubscriberDTO checkSubscriberIsNotVerified(String serial){
+        SubscriberDTO subscriber = subscriberRepoPort.findByLastSerial(serial).orElseThrow(() -> BaseException.badRequest(ErrorCode.ISDN_NOT_FOUND).build());
+        checkSubscriberIsNotVerified(subscriber);
         return subscriber;
     }
 
@@ -775,9 +966,10 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
      *
      * @param isdn: Kiểm tra theo isdn
      */
-    private SubscriberDTO checkSubscriberIsVerified(Long isdn){
+    @Override
+    public SubscriberDTO checkSubscriberIsNotVerified(Long isdn){
         SubscriberDTO subscriber = subscriberRepoPort.findByLastIsdn(isdn).orElseThrow(() -> BaseException.badRequest(ErrorCode.ISDN_NOT_FOUND).build());
-        checkSubscriberIsVerified(subscriber);
+        checkSubscriberIsNotVerified(subscriber);
         return subscriber;
     }
 
@@ -786,20 +978,29 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
      *
      * @param subscriber: Số thuê bao cần kiểm tra
      */
-    private SubscriberDTO checkSubscriberIsVerified(SubscriberDTO subscriber){
-        if(Objects.equals(subscriber.getStatus(), Status.INACTIVE.getValue())){
-            log.error("Subscriber: {} đã bị cắt hủy", subscriber);
-            throw BaseException.badRequest(ErrorCode.SUBSCRIBER_IS_INACTIVE).build();
-        }
-
-        if(!Objects.equals(subscriber.getStatusCall900(), Call900Status.CALLED.getValue())){
-            log.error("Subscriber: {} chưa gọi 900", subscriber);
-            throw BaseException.badRequest(ErrorCode.SUBSCRIBER_NOT_CALL_900).build();
+    @Override
+    public SubscriberDTO checkSubscriberIsNotVerified(SubscriberDTO subscriber){
+        if(!Objects.equals(subscriber.getStatusCall900(), Call900Status.CALLED.getValue())
+            && SecurityUtil.getCurrentUserId() == null){
+                log.error("Subscriber: {} chưa gọi 900", subscriber);
+                throw BaseException.badRequest(ErrorCode.SUBSCRIBER_NOT_CALL_900).build();
         }
 
         if(Objects.equals(subscriber.getVerifiedStatus(), Status.ACTIVE.getValue())){
             log.error("Subscriber: {} đã đăng ký thông tin", subscriber);
             throw BaseException.badRequest(ErrorCode.SUBSCRIBER_IS_VERIFIED).build();
+        }
+
+        if(SecurityUtil.getCurrentClientId() != null &&
+            !Objects.equals(INTERNAL_CLIENT_ID, SecurityUtil.getCurrentClientId()) &&
+            !Objects.equals(subscriber.getClientId(), SecurityUtil.getCurrentClientId())){
+                log.error("Subscriber: {} không thuộc client hiện tại", subscriber);
+                throw BaseException.badRequest(ErrorCode.ISDN_NOT_BELONG_PARTNER).build();
+        }
+
+        if(!Objects.equals(Status.ACTIVE.getValue(), subscriber.getBoughtStatus())){
+            log.error("Subscriber: {} chưa được bán", subscriber.getIsdn());
+            throw BaseException.badRequest(ErrorCode.SUBSCRIBER_HAS_NOT_BOUGHT).build();
         }
 
         return subscriber;
@@ -809,12 +1010,65 @@ public class ActiveSubscriberService implements ActiveSubscriberServicePort {
         return paramContractConfig.getContract().getSimActive().getFinalContractFolder() + Constant.CommonSymbol.FORWARD_SLASH + transactionId;
     }
 
-    private String buildTempContractUrl(String transactionId){
+    @Override
+    public String buildTempContractUrl(String transactionId){
         LocalDate today = LocalDate.now();
         return Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER
             + Constant.CommonSymbol.FORWARD_SLASH // /
-            + today
+            + today.getYear() + "-" + today.getMonthValue()
             + Constant.CommonSymbol.FORWARD_SLASH // /
             + transactionId;
+    }
+
+    @Override
+    public Long formatIsdn(Long isdn) {
+        String isdnStr = isdn.toString();
+        return Long.parseLong(isdnStr.startsWith(VIETTEL_PREFIX) ? isdnStr.substring(VIETTEL_PREFIX.length()) : isdnStr);
+    }
+
+    @Override
+    public byte[] getCskhSignature(String userId, String transactionId) {
+        if(userId == null){
+            log.info("[ACTIVE_SUBSCRIBER]: Don't need to get cskh signature for transactionId: {}", transactionId);
+            return new byte[0];
+        }
+
+        try {
+            Resource signature = downloadFile(Constant.MinioDir.UserSignature.buildSignatureUrl(userId));
+            return signature.getContentAsByteArray();
+        } catch (Exception e) {
+            log.error("[ACTIVE_SUBSCRIBER]: Get signature of user: {} error", userId, e);
+            return new byte[0];
+        }
+    }
+
+    @Override
+    public void genDecree13(ActiveSubscriberDataDTO activeData, byte[] signature) {
+        GenContractDTO genContract = activeSubscriberMapper.mapGenContractDto(activeData);
+        AgreeDecree13ContractDataDto agree13Contract = activeSubscriberMapper.mapAgree13DFromGenContract(genContract, activeData.getAgreeDegree13());
+
+        //Fill dữ liệu chữ ký
+        agree13Contract.setSignatureCustomer(signature);
+        agree13Contract.setSignatureCskh(getCskhSignature(activeData.getUserId(), activeData.getTransactionId()));
+
+        DownloadOptionDTO downloadOption =  getDownloadDecree13ContractOption();
+        Resource template = minioOperations.download(downloadOption);
+
+        try {
+            ByteArrayOutputStream pdfFile = PdfContractUtils.fillDataToPdf(template.getInputStream().readAllBytes(), agree13Contract, AgreeDecree13ContractDataDto.class);
+            ByteArrayOutputStream pngFile = PdfContractUtils.convertPdfToOneJpgFile(pdfFile.toByteArray(), true);
+
+            String agree13PdfUrl = uploadFileToMinio(pdfFile.toByteArray(), Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, activeData.getTransactionId() + "/" + AGREE_13_FILE_NAME + TypeContract.PDF);
+            String agree13PngUrl = uploadFileToMinio(pngFile.toByteArray(), Constant.MinioDir.ActiveSubscriber.TEMP_FOLDER, activeData.getTransactionId() + "/" + AGREE_13_FILE_NAME + TypeContract.PNG);
+
+            activeData.setAgreeDecree13PdfUrl(agree13PdfUrl);
+            activeData.setAgreeDecree13PngUrl(agree13PngUrl);
+        } catch (IOException e) {
+            log.error("[ACTIVE_SUBSCRIBER]: Generate agreement decree 13 error", e);
+            throw BaseException.badRequest(ErrorCode.GEN_CONTRACT_FAIL)
+                .message(e.getMessage())
+                .addProblemDetail(ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, e.getMessage()))
+                .build();
+        }
     }
 }
